# Trendz

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Juul.pkl  Juul_vs_Tiktok.pkl  README.md  Trends.db  interest.py  interest_over_time_format.txt  keywords.py  main.py  masterkeywordDF.html  masterkeywordDF.pkl  mysql_cheatsheet.txt  pip_install_pytrends.txt  pyproject.toml  requirements.txt  sql.py  starter_keywords.txt  temp.html  test.html  test.py  visualizer.py
